java8のやり方に修正